# drone-swarm-slam

./: .clang-tidy  .dockerignore  .gitmodules  CLAUDE.md  agent-orchestrator.yaml
.github/workflows/: firmware.yml  ground-station.yml  lint-firmware.yml  lint-ground.yml  lint.yml
ardupilot/: README.md
ardupilot/params/: README.md  common.param  companion_serial.param
ardupilot/scripts/: diff_params.sh
data/recordings/: .gitignore
docker/: Dockerfile.firmware  Dockerfile.ground  Dockerfile.ground-runtime  docker-compose.runtime.yml  docker-compose.yml
docs/: architecture.md  getting_started.md  hardware_wiring.md  verification.md
firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/mavlink_bridge/: CMakeLists.txt  Kconfig  mavlink_bridge.c  mavlink_parser.c
firmware/components/mavlink_bridge/include/: mavlink_bridge.h  mavlink_parser.h
firmware/components/mavlink_bridge/test/: CMakeLists.txt  test_mavlink_parser.c
firmware/components/ov2640/: CMakeLists.txt  Kconfig  idf_component.yml  ov2640.c
firmware/components/ov2640/include/: ov2640.h
firmware/components/ov2640/test/: CMakeLists.txt  test_ov2640.c
firmware/components/tof_sensor/: CMakeLists.txt  Kconfig  idf_component.yml
firmware/components/tof_sensor/include/: tof_sensor.h
firmware/components/tof_sensor/src/: tof_sensor.c
firmware/components/tof_sensor/test/: CMakeLists.txt  test_tof_sensor.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
firmware/test/: test_mavlink_parser_host.c
ground_station/: CMakeLists.txt  package.xml
ground_station/launch/: ground_station.launch.py
ground_station/src/battery_monitor/: CMakeLists.txt  package.xml
ground_station/src/battery_monitor/include/battery_monitor/: battery_monitor_node.hpp  mavlink_battery_parser.hpp
ground_station/src/battery_monitor/launch/: battery_monitor.launch.py
ground_station/src/battery_monitor/src/: battery_monitor_node.cpp  main.cpp  mavlink_battery_parser.cpp
ground_station/src/battery_monitor/test/: test_mavlink_battery_parser.cpp
ground_station/src/dss_msgs/: CMakeLists.txt  package.xml
ground_station/src/dss_msgs/msg/: MapUpdate.msg
ground_station/src/mission_controller/: CMakeLists.txt  package.xml
ground_station/src/mission_controller/include/mission_controller/: mission_controller_node.hpp  waypoint_manager.hpp
ground_station/src/mission_controller/launch/: mission_controller.launch.py
ground_station/src/mission_controller/src/: main.cpp  mission_controller_node.cpp  waypoint_manager.cpp
ground_station/src/mission_controller/test/: test_waypoint_manager.cpp
ground_station/src/pointcloud_assembler/: CMakeLists.txt  package.xml
ground_station/src/pointcloud_assembler/include/pointcloud_assembler/: pointcloud_assembler.hpp  pointcloud_assembler_node.hpp
ground_station/src/pointcloud_assembler/launch/: pointcloud_assembler.launch.py
ground_station/src/pointcloud_assembler/src/: main.cpp  pointcloud_assembler.cpp  pointcloud_assembler_node.cpp
ground_station/src/pointcloud_assembler/test/: test_pointcloud_assembler.cpp
ground_station/src/pose_estimator/: CMakeLists.txt  package.xml
ground_station/src/pose_estimator/include/pose_estimator/: mavlink_encoder.hpp  pose_estimator_node.hpp
ground_station/src/pose_estimator/launch/: pose_estimator.launch.py
ground_station/src/pose_estimator/src/: main.cpp  mavlink_encoder.cpp  pose_estimator_node.cpp
ground_station/src/pose_estimator/test/: test_mavlink_encoder.cpp
ground_station/src/pose_extractor/: CMakeLists.txt  package.xml
ground_station/src/pose_extractor/include/pose_extractor/: mavlink_frame_parser.hpp  mavlink_pose_extractor_node.hpp
ground_station/src/pose_extractor/launch/: mavlink_pose_extractor.launch.py
ground_station/src/pose_extractor/src/: main.cpp  mavlink_frame_parser.cpp  mavlink_pose_extractor_node.cpp
ground_station/src/pose_extractor/test/: test_mavlink_frame_parser.cpp
ground_station/src/slam_node/: CMakeLists.txt  package.xml
ground_station/src/slam_node/include/slam_node/: occupancy_map.hpp  slam_node.hpp
ground_station/src/slam_node/launch/: slam_node.launch.py
ground_station/src/slam_node/src/: main.cpp  occupancy_map.cpp  slam_node.cpp
ground_station/src/slam_node/test/: test_occupancy_map.cpp
ground_station/src/tf_broadcaster/: CMakeLists.txt  package.xml
ground_station/src/tf_broadcaster/include/tf_broadcaster/: drone_tf_broadcaster.hpp
ground_station/src/tf_broadcaster/launch/: drone_tf_broadcaster.launch.py
ground_station/src/tf_broadcaster/src/: drone_tf_broadcaster.cpp  main.cpp
ground_station/src/tf_broadcaster/test/: test_drone_tf_broadcaster.cpp
ground_station/src/tof_simulator/: CMakeLists.txt  package.xml
ground_station/src/tof_simulator/include/tof_simulator/: tof_data_generator.hpp  tof_simulator_node.hpp
ground_station/src/tof_simulator/launch/: tof_simulator.launch.py
ground_station/src/tof_simulator/src/: main.cpp  tof_data_generator.cpp  tof_simulator_node.cpp
ground_station/src/tof_simulator/test/: test_tof_data_generator.cpp  test_tof_simulator_node.cpp
ground_station/test/: test_ground_station.cpp  test_launch_file.py  test_slam_pipeline.py
hardware/: inventory.yaml
msgs/drone_swarm_msgs/: CMakeLists.txt  package.xml
msgs/drone_swarm_msgs/msg/: DronePose.msg  ToFScan.msg
tools/: backup_params.sh  flash_firmware.sh  record_flight.sh  setup_fc.sh  setup_mac.sh  upload_params.sh
