<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_swarm_ground_station</name>
  <version>0.1.0</version>
  <description>Ground station for multi-drone 3D SLAM system</description>
  <maintainer email="todo@todo.com">drone-swarm-slam</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  <!-- Integration test: nodes started as subprocesses -->
  <test_depend>drone_swarm_tf_broadcaster</test_depend>
  <test_depend>drone_swarm_tof_simulator</test_depend>
  <test_depend>drone_swarm_pointcloud_assembler</test_depend>
  <test_depend>drone_swarm_slam</test_depend>
  <!-- rclpy + tf2_ros used in-process by the validator node -->
  <test_depend>rclpy</test_depend>
  <test_depend>tf2_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
