<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_swarm_pose_estimator</name>
  <version>0.1.0</version>
  <description>
    Converts SLAM-estimated pose to MAVLink VISION_POSITION_ESTIMATE corrections
    for ArduCopter EKF position fusion. Subscribes to /drone_N/pose/estimated
    and publishes on /drone_N/mavlink/to_fc.
  </description>
  <maintainer email="maintainer@todo.todo">Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
